--- a/assets/CSS/questionPage.css
+++ b/assets/CSS/questionPage.css
@@ -1,5 +1,27 @@
-body{ background-image: url(../CSS/bg.jpg);
-    background-size: cover;
-    background-position:top;
-    font-family:"outfit", sans-serif;
+h1 {
+  font-size: 2.5rem;
+}
+
+h1 span {
+  font-weight: bold;
+}
+
+#questionImage,
+#textualAnswer {
+  display: inline-block;
+  vertical-align: top;
+}
+
+#questionImage img {
+  width: 300px;
+  border: 2px solid #b51289;
+  border-radius: 10px;
+}
+
+#textualAnswer {
+  margin: 0 2rem;
+}
+
+.questionAnswers {
+  margin-top: 10px;
 }
