--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -64,11 +64,6 @@ section {
   height: 250px;
 }
 
-
-
-
-
-
 #divMessage {
   height: 1.5rem;
   text-align: center;
@@ -82,8 +77,6 @@ section {
   text-align: center;
 }
 
-
-
 input[type='radio'],
 input[type='checkbox'] {
   accent-color: #b51289;
@@ -91,8 +84,6 @@ input[type='checkbox'] {
   width: 20px;
   height: 20px;
 }
-
-
 
 button {
   display: block;
@@ -107,4 +98,5 @@ button {
   border: none;
   box-shadow: 0 0 3px #00ffff, 0 0 20px #00ffff, 0 0 45px #00ffff,
     0 0 180px #00ffff;
+  text-transform: uppercase;
 }
