--- a/assets/CSS/feedbackPage.css
+++ b/assets/CSS/feedbackPage.css
@@ -1,12 +1,18 @@
 
+  #container {
+    width: 50%;
+  }
+  
   h1{
     font-size: 3em;
     font-weight: bold;
   }
 
+
+
 #content{
     margin: 0;
-    height: 20em;
+    height: 18em;
 
 }
 header{
@@ -16,7 +22,7 @@ header{
   #content p{
     font-size: 1.55em;
     text-align: center;
-    padding: 0 3.5em;
+    padding: 0;
   }
 
   #title{
@@ -24,7 +30,7 @@ header{
   }
 
   .fas {
-    padding: 0 0.1em;
+    padding: 0.05em;
     color: #000000b0;
   }
 
@@ -35,14 +41,14 @@ header{
   }
 
   label {
-    margin: 2.5em;
+    margin: 3em 0 1.5em;
     display: block;
     text-align: center;
     font-size: 1.55em;
   }
 
 form{
-    border-bottom: 2px solid purple;
+    border-bottom: 3px solid purple;
     padding-bottom: 5px;
 }
 
