--- a/assets/CSS/resultsPage.css
+++ b/assets/CSS/resultsPage.css
@@ -12,6 +12,8 @@
 
 #content {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #correctAnswers {
@@ -86,4 +88,5 @@
   border: solid white 1px;
   color: white;
   font-weight: 500;
+  text-align: center;
 }
