--- a/assets/CSS/welcomePage.css
+++ b/assets/CSS/welcomePage.css
@@ -1,14 +1,20 @@
+#logo{
+    padding-left:13rem;
+}
 h1{
     text-align: left;
-    font-size:4rem;
+    font-size:5rem;
     font-family: 'outfit', sans-serif;
+    
     
 }
 .bold{
     font-weight:bold;
 }
+#title{margin-bottom:5rem;}
 
 h2{    color: #D20094;
+    
     font-weight: bold;
 font-size:2rem;
 font-family:'outfit',sans-serif;}
@@ -31,13 +37,63 @@ line-height:2rem;
 font-family:'inter',sans-serif;}
 
 
-#littleSquare{display:inline-block;}
+#check{margin-right:2rem;
+}
+
+
 #checkBox{
+display:inline-block;
+
+width: 20px;
+height: 20px;
+margin-right:3rem;
+padding-left:2rem;}
+
+#check{
+    padding-left:2rem;
+}
+
+input[type='checkbox'] {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    }
+    input[type='checkbox'] + label {cursor: pointer;padding: 0 0 0 15px;margin: 0 0 0 5px;position: relative;
+    }
+
+#terms:not(#foo) > input[type='checkbox'] + label:before {
+content: "";
+width: 20px;
+height: 20px;
+border: solid 2px #e7e7eb;
+background: rgb(12,16,59);
+cursor: pointer;
+position: absolute;
+top: -1px;
+left:-5px;
+}
+
+input[type='checkbox']:checked + label::after{
+    content:'✔';
     display:inline-block;
-outline:2px solid #e7e7eb;
-  width: 20px;
-  height: 20px;
+    position: absolute;
+    top: 1px;
+left: 0;
+margin: 0 auto;
+color:#e7e7eb;
+font: size 10px;
 
 }
-button {display:inline-block;
-margin-left:10rem;}
+
+#terms {
+    display: inline-block;
+}
+
+#terms input,
+#terms label,
+#terms button {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+button{margin-left:11.5rem;}
