--- a/assets/CSS/resultsPage.css
+++ b/assets/CSS/resultsPage.css
@@ -90,3 +90,32 @@
   font-weight: 500;
   text-align: center;
 }
+
+.cyan {
+  color: cyan;
+}
+
+table {
+  border: 1px solid white;
+  margin: 0 auto 3rem auto;
+}
+td {
+  padding: 10px;
+  border: 1px solid white;
+}
+
+th {
+  padding: 10px;
+  border: 1px solid white;
+  background-color: #e7e7eb;
+  color: black;
+}
+
+.trIsCorrect {
+  background-color: cyan;
+  color: black;
+}
+
+.trIsIncorrect {
+  background-color: #d20094;
+}
