--- a/assets/CSS/resultsPage.css
+++ b/assets/CSS/resultsPage.css
@@ -1,7 +1,3 @@
-#title {
-  font-family: 'outfit', sans-serif;
-}
-
 #title > h1 {
   font-size: 5em;
 }
@@ -12,41 +8,36 @@
 
 #content {
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 #correctAnswers {
   text-align: left;
-  display: inline-block;
+}
 
-  line-height: 3rem;
+#wrongAnswers {
+  text-align: right;
 }
 
 #correctAnswers,
 #wrongAnswers {
   font-size: 3rem;
+  display: inline-block;
+  line-height: 3rem;
 }
 
 #graphic {
   text-align: center;
   display: inline-block;
-  width: 250px;
-  height: 250px;
-  margin: 0 170px;
   position: relative;
-}
-
-#wrongAnswers {
-  text-align: right;
-  display: inline-block;
-  line-height: 3rem;
 }
 
 #correctAnswers,
 #graphic,
 #wrongAnswers {
   vertical-align: middle;
+  width: 300px;
+  height: 300px;
+  border: 1px solid white;
 }
 
 #graphic > div {
