--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,6 +7,7 @@ body {
   color: #e7e7eb;
   box-sizing: content-box;
   font-size: 1rem;
+  line-height: 1.2rem;
 }
 
 header {
@@ -16,6 +17,19 @@ header {
 
 section {
   width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div {
+  line-height: 1; /* Imposta l'altezza della linea pari a quella del testo */
+}
+p {
+  line-height: 1.3;
 }
 
 #divLogo,
@@ -41,10 +55,10 @@ section {
   font-weight: bold;
 }
 
-#logo {
+#logoImg {
   width: 150px;
   margin-top: 3rem;
-  margin-left: 7rem;
+  margin-left: 0rem;
   margin-bottom: 7rem;
 }
 
@@ -52,8 +66,9 @@ section {
   margin-top: 1rem;
   margin-left: auto;
   margin-right: auto;
-  width: 65%;
+  width: 1024px;
 }
+
 #title {
   text-align: center;
   height: 8em;
@@ -61,7 +76,7 @@ section {
 
 #content {
   margin-top: 3rem;
-  height: 250px;
+  /* height: 250px; */
 }
 
 #divMessage {
@@ -86,6 +101,7 @@ input[type='checkbox'] {
 }
 
 button {
+  cursor: pointer;
   display: block;
   margin: 3rem auto;
   height: 3rem;
@@ -98,4 +114,5 @@ button {
   border: none;
   box-shadow: 0 0 3px #00ffff, 0 0 20px #00ffff, 0 0 45px #00ffff,
     0 0 180px #00ffff;
+  text-transform: uppercase;
 }
