--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -28,8 +28,41 @@ h6,
 div {
   line-height: 1; /* Imposta l'altezza della linea pari a quella del testo */
 }
+
 p {
   line-height: 1.3;
+}
+
+input[type='radio'],
+input[type='checkbox'] {
+  accent-color: #b51289;
+  /* Cambia il colore degli input selezionati */
+  width: 20px;
+  height: 20px;
+}
+
+button {
+  cursor: pointer;
+  display: block;
+  margin: 3rem auto;
+  height: 3rem;
+  width: 13rem;
+  background-color: #00ffff;
+  font-family: 'outfit', sans-serif;
+  font-weight: 800;
+  font-size: 20px;
+  background-color: #00ffff;
+  border: none;
+  text-transform: uppercase;
+}
+
+.activatedButton {
+  box-shadow: 0 0 3px #00ffff, 0 0 20px #00ffff, 0 0 45px #00ffff,
+    0 0 180px #00ffff;
+}
+
+.fucsiaColor {
+  color: #d20094;
 }
 
 #divLogo,
@@ -80,42 +113,12 @@ p {
 }
 
 #divMessage {
+  padding-top: 1.5rem;
   height: 1.5rem;
   text-align: center;
-}
-.fucsiaColor {
-  color: #d20094;
 }
 
 #lastSection {
   margin-top: 3rem;
   text-align: center;
-}
-
-input[type='radio'],
-input[type='checkbox'] {
-  accent-color: #b51289;
-  /* Cambia il colore degli input selezionati */
-  width: 20px;
-  height: 20px;
-}
-
-button {
-  cursor: pointer;
-  display: block;
-  margin: 3rem auto;
-  height: 3rem;
-  width: 13rem;
-  background-color: #00ffff;
-  font-family: 'outfit', sans-serif;
-  font-weight: 800;
-  font-size: 20px;
-  background-color: #00ffff;
-  border: none;
-  text-transform: uppercase;
-}
-
-.activatedButton {
-  box-shadow: 0 0 3px #00ffff, 0 0 20px #00ffff, 0 0 45px #00ffff,
-    0 0 180px #00ffff;
 }
