--- a/assets/CSS/feedbackPage.css
+++ b/assets/CSS/feedbackPage.css
@@ -16,6 +16,7 @@ header {
   font-size: 1.55em;
   text-align: center;
   padding: 0;
+  margin: 0;
 }
 
 #title {
@@ -24,6 +25,7 @@ header {
 
 .fas {
   padding: 0;
+  margin: 0;
   color: #000000b0;
 }
 
@@ -56,33 +58,43 @@ input {
 
 #s1 {
   padding: 0;
+  margin: 0;
 }
 #s2 {
   padding: 0;
+  margin: 0;
 }
 #s3 {
-  padding-right: 0.05em;
+  padding: 0;
+  margin: 0;
 }
 #s4 {
   padding: 0;
+  margin: 0;
 }
 #s5 {
   padding: 0;
+  margin: 0;
 }
 #s6 {
   padding: 0;
+  margin: 0;
 }
 #s7 {
   padding: 0;
+  margin: 0;
 }
 #s8 {
   padding: 0;
+  margin: 0;
 }
 #s9 {
   padding: 0;
+  margin: 0;
 }
 #s10 {
   padding: 0;
+  margin: 0;
 }
 
 /* modifiche js */
