--- a/assets/CSS/welcomePage.css
+++ b/assets/CSS/welcomePage.css
@@ -134,3 +134,32 @@ input[type='checkbox']:checked::after {
   vertical-align: middle;
   margin-right: 10px;
 }
+
+select {
+  appearance: none;
+  outline: none;
+  margin: 15rem auto 5rem auto;
+  color: white;
+  background-color: transparent;
+}
+select::part(button) {
+  border: 2px solid #aa99a0;
+  border-radius: 0.15rem;
+  padding: 0.6rem;
+}
+select::part(listbox) {
+  background: #aa99a0;
+  box-shadow: 0 0 0.3rem 0 #0003;
+  margin-top: 0.3rem;
+  border: 2px solid #aa99a0;
+  border-radius: 0.15rem;
+  padding: 0;
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-auto-flow: column;
+  gap: 2px;
+}
+select option {
+  padding: 0.6rem;
+  background: white;
+}
