modifica ai CSS per introdurre gli altri temi

--- a/assets/CSS/questionPage.css
+++ b/assets/CSS/questionPage.css
@@ -19,7 +19,7 @@ h1 span {
 
 #questionImage img {
   width: 300px;
-  border: 2px solid #b51289;
+  border: 2px solid var(--evidence1-color);
   border-radius: 10px;
 }
 
