--- a/assets/CSS/LolloTimer.css
+++ b/assets/CSS/LolloTimer.css
@@ -6,8 +6,8 @@
 }
 
 .path--background {
-  fill: rgb(34, 213, 201);
-  stroke: #fff;
+  fill: var(--evidence1-color);
+  stroke: var(--evidence0-color);
   stroke-width: 0px;
 }
 
@@ -16,8 +16,8 @@
 }
 
 .path--foreground {
-  fill: #eee;
-  stroke: #eee;
+  fill: var(--text-color);
+  stroke: var(--text-color);
   stroke-width: 2px;
 }
 
@@ -25,5 +25,5 @@
   font: 3rem;
   font-weight: 900;
   text-anchor: middle;
-  fill: rgb(34, 213, 201);
+  fill: var(--evidence1-color);
 }
