--- a/assets/CSS/_geografia.css
+++ b/assets/CSS/_geografia.css
@@ -4,6 +4,7 @@
   --evidence1-color: #2980b9; /* Azzurro oceano per i titoli */
   --evidence2-color: #96cc02; /* Arancione terra per il grafico */
   --evidence3-color: #3498db; /* Blu cielo per il grafico */
+  --evidence4-color: white;
 }
 
 body {
@@ -24,13 +25,44 @@ img#themeIcon {
   position: absolute;
   width: 30px;
   transform: translate(-50%, +100%) rotate(25deg);
+  z-index: 999;
+  cursor: pointer;
+}
+
+#themeIcon:hover {
+  transform: scale(2);
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease;
 }
 
 th {
   font-weight: 900;
 }
 
-button#trasparent {
+button#trasparent,
+#buttonProceed,
+#nextQuestionButton {
   background-color: var(--evidence1-color);
-  color: var(--text-color);
+  color: var(--evidence4-color);
+}
+
+.activatedButton,
+button#trasparent:hover {
+  box-shadow: 0 0 3px var(--evidence1-color), 0 0 20px var(--evidence1-color),
+    0 0 45px var(--evidence1-color), 0 0 180px var(--evidence1-color);
+}
+#correctNumber,
+#wrongNumber {
+  font-weight: bold;
+}
+
+th,
+.trIsIncorrect {
+  color: var(--evidence4-color);
+}
+
+a {
+  color: var(--evidence1-color);
+  text-decoration: none;
 }
