--- a/assets/CSS/resultsPage.css
+++ b/assets/CSS/resultsPage.css
@@ -31,8 +31,16 @@
   position: relative;
 }
 
+
+#graphic
+ {
+  vertical-align: middle;
+  width: 400px;
+  height: 400px;
+  border: 1px solid var(--evidence0-color);
+}
+
 #correctAnswers,
-#graphic,
 #wrongAnswers {
   vertical-align: middle;
   width: 300px;
