--- a/assets/CSS/theme-geografia.css
+++ b/assets/CSS/theme-geografia.css
@@ -36,6 +36,11 @@ img#themeIcon {
   -webkit-transition-timing-function: ease;
 }
 
+#textualAnswer {
+  background-color: unset;
+  border: 1px solid var(--evidence1-color);
+}
+
 th {
   font-weight: 900;
 }
