--- a/assets/CSS/theme-cucina.css
+++ b/assets/CSS/theme-cucina.css
@@ -1,9 +1,9 @@
 :root {
   --text-color: #4a4a4a; /* Grigio scuro per il testo */
-  --evidence0-color: #ce5b0e; /* Giallo dorato per il testo evidenziato */
+  --evidence0-color: #f39c12; /* Giallo dorato per il testo evidenziato */
   --evidence1-color: #d35400; /* Arancione scuro per i titoli */
   --evidence2-color: #e74c3c; /* Rosso per il grafico */
-  --evidence3-color: #2ecc71; /* Verde per il grafico */
+  --evidence3-color: #1f914e; /* Verde per il grafico */
   --evidence4-color: white;
 }
 
@@ -43,12 +43,29 @@ img#themeIcon {
   cursor: pointer;
 }
 
-#themeIcon:hover {
+img#themeIcon:hover {
+  animation: bounce 0.5s linear;
+}
+
+@keyframes bounce {
+  50% {
+    transform: translate(-50%, +100%) rotate(25deg) scale(5);
+  }
+  100% {
+    transform: translate(-50%, +100%) rotate(25deg) scale(1);
+  }
+}
+
+/* #themeIcon:hover {
+  transform: scale(2);
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
   transform: scale(2);
   -webkit-transition-property: all;
   -webkit-transition-duration: 0.3s;
   -webkit-transition-timing-function: ease;
-}
+} */
 
 #textualAnswer {
   color: var(--evidence4-color);
