--- a/assets/CSS/theme-geografia.css
+++ b/assets/CSS/theme-geografia.css
@@ -29,11 +29,17 @@ img#themeIcon {
   cursor: pointer;
 }
 
-#themeIcon:hover {
-  transform: scale(2);
-  -webkit-transition-property: all;
-  -webkit-transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease;
+img#themeIcon:hover {
+  animation: bounce 0.5s linear;
+}
+
+@keyframes bounce {
+  50% {
+    transform: translate(-50%, +100%) rotate(25deg) scale(5);
+  }
+  100% {
+    transform: translate(-50%, +100%) rotate(25deg) scale(1);
+  }
 }
 
 #textualAnswer {
